UHM-918 - Fix alignment from the schedule appointment title.

--- a/omod/src/main/compass/sass/scheduleAppointment.scss
+++ b/omod/src/main/compass/sass/scheduleAppointment.scss
@@ -58,13 +58,13 @@
   position:absolute;
 }
 
-#scheduleAppointment h2 {
-  margin-top:40px;
-}
-
 .notes {
   margin-top: 30px;
 }
 .appointment-filters{
   margin-bottom:20px;
+}
+
+.scheduleAppointmentTitle {
+  margin-top: 40px;
 }
